working slider front page

--- a/index.html
+++ b/index.html
@@ -1,139 +1,41 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keyword" content="devloper">
-    <link rel="stylesheet" href="project.css">
-     <title>Aravinthan devloper</title>
-     <script src="https://kit.fontawesome.com/039470345b.js" crossorigin="anonymous"></script>
-     <script src="project.js"></script>
+<head>
+<mata name="viewport" content="width=device-width, initial-scale=1">
+<title>slider</title>
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
 <header>
-<div class="nav-img" >
-<a href="#" ><img src="C:\aravinth wordpress\image/aravinthan.png" alt="" width="200px" ></a></div>
-<ul class="nav-links">
-<li><a href="#about">About me</a> </li>
-<li><a href="#service">service</a></li>
-<li><a href="#portfolio">portfolio</a></li>
-<li><a href="#conatct">Contact me</a></li>
-<li><a href="#">Hire me</a></li>
-</ul>
-<button class="cta-button"><a href="tel:6374840032">+916374840032</a></button>
+<div class="head">
+<div class="logo">
+<img src="C:\aravinth wordpress\image/aravinthan.png" alt="" width="200px">
+</div>
+<div class="menu">
+<ul>
+<li><a href="#">contact</a></li>
+<li><a href="#">help</a></li>
+</div>
+</div>
 </header>
-<section class="main">
-<div class="left-side">
-<div class="img">
-<img src="C:\aravinth wordpress\image/image.webp" alt="" width="70%" >
-</div>
-</div>
-<div class="rightside">
-<div class="myname">
-<h2>Hii there iam</h2>
-<h1>Aravinthan</h1>
-<h3>iam devloper<span></span></h3>
-<a href="" class="cv" >download CV</a>
-</div>
-</div>
 
-</section>
-<section class="about" id="about">
-<div class="my-img">
+<section>
+<div class="main">
+<div class="circle">
+<div class="opt1">
+<img src="C:\aravinth wordpress\image/html.png" alt="">
+</div>
+<div class="opt2">
 <img src="" alt="">
 </div>
-<div class="my-self">
-<h1>About me</h1>
-<p>I am forent end devloper .iam intrested to learn full stack devlopment .my skills are presented there ,i'm enjoy work my work as webdevloper </p>
-<div class="tab-title">
-<p class="tab-link active-link " onclick="opentab('skill')">skill</p>
-<p class="tab-link " onclick="opentab('exprience')">exprience</p>
-<p class="tab-link " onclick="opentab('education')">education</p>
+<div class="opt3">
+<img src="" alt="">
 </div>
-<div class="tab-content active-content " id="skill">
-<ul>
-<li><span>FrontEndDevlopment</span><br>HTML<br>CSS<br>JAVASCRIPT <br> REACTJS</li>
-<li>WordpressCustimes themes and Plugins</li>
-</ul></div>
-<div class="tab-content " id="exprience">
-<ul>
-<li><span>2022</span><br>pizodesigns Frontenddevloper</li>
-<li><span>2022</span><br>GOD studio Frontenddevloper</li>
-</ul></div>
-<div class="tab-content  " id="education">
-<ul>
-<li><span>2022</span><br>pizodesigns  intership-Frontenddevloper </li>
-<li><span>2018-2021</span><br>BSC computerscince </li>
-<li><span>2018</span><br>HR SECONDERY</li>
-<li><span>2016</span><br>SSC</li>
-</ul>
-
+<div class="opt4">
+<img src="" alt="">
+</div>
 </div>
 </div>
 </section>
-<section class="service-sec" id="service">
-<h1>My services</h1>
-<div class="serivce-main">
-<div class="service">
-<i class="fa-brands fa-wordpress"></i>
-<h3>wordpress</h3>
-<p> professional that specializes in the infrastructure and ecosystem of the WordPress platform</p>
-</div>
-<div class="service">
-<i class="fa-solid fa-code"></i>
-<h3>Responsive web</h3>
-<p>Responsive web design is about creating web pages that look good on all devices! A responsive web design will automatically adjust for different screen </p>
-</div>
-<div class="service">
-<i class="fa-brands fa-react"></i>
-<h3>Reactjs</h3>
-<p>build modern-day UI components to improvise application performance. The leverage  knowledge about JavaScript, HTML, CSS and work closely web designers create a robust and effective application</p>
-</div>
-</div>
-</section>
-<section class="porfolio" id="portfolio" >
-<h1>Portfolio</h1>
-<div class="porfolio-list">
-<div class="porfolio-item">
-<img src="C:\aravinth wordpress\image/web1.jpg" alt="">
-</div>
-<div class="porfolio-item">
-<img src="C:\aravinth wordpress\image/web2.webp" alt="">
-</div>
-<div class="porfolio-item">
-<img src="C:\aravinth wordpress\image/web3.png" alt="">
-</div>
-<div class="porfolio-item">
-<img src="C:\aravinth wordpress\image/web4.jpg" alt="">
-</div>
-</div>
-</section>
-<section class="contact-me" id="conatct">
-<h1>Contact</h1>
-<div class="contact-main">
-<div class="contact-detail">
-<p><a href="mailto:aravinthankumar231@gmail.com">@Aravinthan</a></p>
-<p><a href="tel:6374840032">6374840032</a></p>
-<a href=""><i class="fa-brands fa-facebook"></i></a>
-<a href=""><i class="fa-brands fa-square-instagram"></i></a>
-<a href=""><i class="fa-brands fa-linkedin"></i></a>
-<a href=""></a>
-</div>
-<div class="contact-box">
-<form>
-<input type="text" name="name" placeholder="ENTER YOUR NAME">
-<input type="mail" name="mail" placeholder="ENTER YOUR MAIL">
-<textarea type="text" name="message" row="10" placeholder="ENTER YOUR TEXT"></textarea>
-<button type="submit" >CLICK ME TO SEND</button>
-</form>
-<div>
-</div>
-</section>
-<div class="footer">
-<p>all <i class="fa-solid fa-copyright"></i> copyrights Reserved by Aravinthan</p>
-</div>
-
-
 </body>
 </html>
-
